# Cost-Control-LLM-Routing

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  dependencies.py
src/api/: main.py
src/db/interfaces/: base.py  postgresql.py
src/models/: request_log.py  schemas.py
src/repositories/: __init__.py  request_log.py
src/router/: __init__.py  classifier.py  generator.py  ping.py  route.py  router.py
src/schemas/: ai_model.py  api_health.py
src/services/groq/: client.py  factory.py
src/services/hf/: client.py  factory.py  prompt.py
src/services/hf/prompts/: classifier.txt
src/services/ollama/: client.py  factory.py  prompt.py
src/services/ollama/prompts/: classifier.txt
src/tasks/: cleanup.py
static/: index.html
